--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1196,6 +1196,24 @@
 				<key>BundlePath</key>
 				<string>ApplePS2SmartTouchPad.kext</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string></string>
+				<key>MaxKernel</key>
+				<string></string>
+				<key>Enabled</key>
+				<true/>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+				<key>MinKernel</key>
+				<string></string>
+				<key>ExecutablePath</key>
+				<string>Contents/MacOS/AirportItlwm</string>
+				<key>Arch</key>
+				<string>Any</string>
+				<key>BundlePath</key>
+				<string>AirportItlwm.kext</string>
+			</dict>
 		</array>
 		<key>Block</key>
 		<array>
